@@ -406,6 +406,7 @@ extern int convert_tap_to_rwa(char *origen, char *destino);
 
 extern int convert_any_to_wav(char *origen, char *destino);
 
+extern int convert_hdf_to_raw(char *origen, char *destino);
 
 extern z80_bit quickload_guessing_tzx_type;
 
